     savegame loading
   * Fixed a small glitch with fog and shroud in the corners (bug #10831)
   * share_view now looks at whether your allies have shared their view,
     before whether or not you saw the view of your allies was determined by
     your own view was shared (bug #10994)
 * WML engine:
   * fixed an off by one error in [scroll_to]
 * miscellaneous and bug fixes:
   * Fixed networking not to timeout with slow connections but timeout faster
     with lost connection (partialy fix bug #10967)
   * Fixed client side ping timeout check if downloading or uploading
   * Moved destruction of conditional object before the mutex. This should 
     fix random crash in network disconnect.
   * Fixed reference to invalid pointer in attack::attack
   * pressing shift affects acceleration immediately
   * More gcc 4.3 fixed
   * Remember cleared hotkey
   * Added some toys&whisles to unit tests
   * Added networking unit tests
   * Optimized MP chat log building
   * Hide race sections having only units with "hide_help=true"
   * Fixed ai handling of unit without attacking weapons (bug #10886)
   * Optimize roads placing of random map
   * when a unit miss an animation, the engine will base the replacement on
     the standing animation instead of the standing frame

Version 1.3.15:
 * language and i18n:
   * updated translations: Catalan, Chinese, Czech, Danish, Dutch, French,
     German, Hungarian, Italian, Lithuanian, Polish, Spanish, Turkish
   * updated DejaVuSans to 2.23
 * graphics:
   * new elvish portraits by Kitty
 * multiplayer:
   * revised maps: Cynsaun Battlefield
   * fixed bug #10777: Cannot cancel a multiplayer password prompt
   * fixed bug #10779: Rejoining game causes major problems
   * Fixed :control command to work
   * Fixed control change not to set wrong team if we are playing now
   * damage statistics for the current turn also works for observers now
   * MP loads now era_id from save file (bug #10878)